# bruh.chat

./: .env-sample  .gitignore  Makefile  README.md  docker-compose.yaml  package-lock.json  package.json
bruh-backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.metrics  Makefile  app.py  erm.json  models.json  pyproject.toml  sample.config.json  themes.ts
bruh-backend/api/: admin.py  api.py  models.py
bruh-backend/api/ai/: controller.py  models.py
bruh-backend/api/conversations/: controller.py  models.py
bruh-backend/api/middleware/: websocket_jwt_auth_middleware.py
bruh-backend/api/migrations/: 0001_initial.py  0002_alter_conversation_id_alter_message_id.py  0002_delete_profile.py  0002_rename_estimated_cost_openrouterresponse_estimated_completion_cost_and_more.py  0003_initial.py  0003_profile_default_aux_model_profile_default_model.py  0004_conversation_message.py  0004_message_model.py  0005_profile_profile_image.py  0005_rename_model_message_model_id.py  0006_profile_auto_generate_titles_and_more.py  0006_useraddedmodels.py  0007_messageattachment.py  0008_alter_messageattachment_file_generatedimage.py  0009_openrouterresponse_cost_and_more.py  0010_openrouterresponse_reasonng_tokens.py  0011_rename_reasonng_tokens_openrouterresponse_reasoning_tokens.py  0012_openrouterresponse_estimated_reasoning_cost.py  0013_remove_openrouterresponse_estimated_image_cost_and_more.py  0014_reasoning_generatedreasoningimage.py  0015_add_message_to_reasoning.py  0020_persona.py  (+23 more)
bruh-backend/config/: asgi.py  celery.py  routing.py  settings.py  urls.py
(+188 files in other folders)
